<resources>
    <string name="app_name">ShoppingList</string>
    <string name="Item_Name">Item name</string>
    <string name="Item_quanity">quantity</string>
    <string name="Item_units">unit</string>
    <string name="Create_Item">Add</string>
    <string name="Create_List">Create</string>
    <string name="List_Name">Enter List Name</string>
    <string name="remove_button">Remove</string>
    <string name="rename_button">Rename</string>
    <string name="duplicate_button">Duplicate</string>
    <string name="item_name_display">%1$s</string>
    <string name="item_quantity_display">%1$.2f %2$s</string>
    <string name="back_to_main">Back to Main</string>
    <string name="to_List">Go To List</string>
    <string name="Rename_Text">Rename To:</string>
    <string name="Rename_Confirm">Rename Confirm</string>
</resources>
